--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@
             color: #015774;
             font-size: 2.5em;
             margin-bottom: 15px;
-            text-shadow: 2px 2px rgba(0, 0, 0, 0.4);
+/*             text-shadow: 2px 2px rgba(0, 0, 0, 0.4); */
             position: relative;
             z-index: 1;
         }
@@ -98,7 +98,7 @@
             color: #015774;
             font-size: 2em;
             margin-bottom: 25px;
-            text-shadow: 2px 2px rgba(0, 0, 0, 0.3);
+/*             text-shadow: 2px 2px rgba(0, 0, 0, 0.3); */
             position: relative;
             z-index: 1;
         }
